Nav Bar, Gallery, Sign Up, Font Add

--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
 </head>
 <body>
     <!--Header-->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="web-pages/gallery.html">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="web-pages/signup.html">Sign up</a>
+                    </li>
+                </ul>
+            </nav>
+        </a>
+    </header>
 
     <!--Main Content-->
     <main>Main Content</main>
