Footer, Facebook Icon, FA Icons Linked

--- a/index.html
+++ b/index.html
@@ -44,7 +44,26 @@
     <main>Main Content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com" target="_blank">
+                    <img src="assets/twitter-icon.png" alt="Twitter">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="assets/instagram-icon.png" alt="Instagram">
+                </a>
+            </li>
+    </footer>
 
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/69626c423a.js" crossorigin="anonymous"></script>
 </body>
 </html>
