Footer Twitter Icon EDIT

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.twitter.com" target="_blank">
-                    <img src="assets/twitter-icon.png" alt="Twitter">
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com" target="_blank">
+                <a href="https://www.instagram.com/" target="_blank">
                     <img src="assets/instagram-icon.png" alt="Instagram">
                 </a>
             </li>
