[HEADER] HTML, Dropdown Icon ADD

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" id="nav-toggle-label">X</label>
+
+        <!--Dropdown Icon-->
+        <label for="nav-toggle" id="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+
+        <!--Navigation Menu-->
         <nav>
             <ul id="menu">
                 <li>
@@ -52,7 +58,7 @@
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
-            
+
             <!--Twitter Icon-->
             <li>
                 <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)">
