--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <!--Main Content-->
     <main>
         <section id="hero">
-            
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Running club for Dublin, Ireland</h3>
         </section>
     </main>
 
