HTML Unclosed Element FIX

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <div id="cover-text">
                 <h2>Love Running</h2>
                 <h3>Running club for Dublin, Ireland</h3>
+            </div>
         </section>
 
         <section id="reasons">
